--- a/exercism/python/pyproject.toml
+++ b/exercism/python/pyproject.toml
@@ -7,3 +7,5 @@ requires-python = ">=3.13"
 dependencies = [
     "pytest>=8.4.1",
 ]
+[tool.pytest.ini_options]
+filterwarnings = "ignore::pytest.PytestUnknownMarkWarning"
